--- a/src/app/security/usuario.list.component.html
+++ b/src/app/security/usuario.list.component.html
@@ -80,6 +80,7 @@
                     <div class="ui-g-12">Apellido: <b>{{usuario.apellido}}</b></div>
                     <div class="ui-g-12">Nombre: <b>{{usuario.nombre}}</b></div>
                     <div class="ui-g-12">Cambiar password:<a [routerLink]="['/changepass','edit',usuario?.id]"> <i class="fa fa-key"></i></a></div>
+                    <div class="ui-g-12">Asignar materias:<a [routerLink]="[]"></a></div>
                 </div>    
                 </div>
             </div>
