--- a/src/app/alumno/alumno.new.component.html
+++ b/src/app/alumno/alumno.new.component.html
@@ -11,7 +11,7 @@
                             </div>
                             <div class="ui-grid-row">    
                                     <div class="ui-grid-col-4">
-                                        <input style="width:100%"   formControlName="id" disabled />
+                                        <input class="form-control" style="width:100%"   formControlName="id" disabled />
                                     </div>
 
                             </div>    
