--- a/src/app/academico/carga.examen.component.html
+++ b/src/app/academico/carga.examen.component.html
@@ -34,44 +34,70 @@
          </div>
     </p-header>
     <p-footer>Seleccione uno de la lista.</p-footer>
-    <ng-template let-insc pTemplate="listItem">
+    <ng-template let-exam pTemplate="listItem">
         <div class="container">
             
                 <div class="row">
-                    <div class="col-xs-3 col-sm-3 col-md-4 col-log-3 col-xl-3">
+                    <div class="col-xs-6 col-sm-3 col-md-4 col-log-3 col-xl-3">
                         Id: 
                     </div>
                     <div class="col-xs-3 col-sm-2 col-md-4 col-log-3 col-xl-2">    
-                        <b><a [routerLink]="['/viewinsc',insc?.id]" >{{insc?.id}}</a></b>
+                        <b><a [routerLink]="['/viewinsc',exam?.id]" >{{exam?.id}}</a></b>
                     </div>
                 </div>
                 <div class="row">                    
-                    <div class="col-xs-3 col-sm-3 col-md-4 col-log-3 col-xl-3">
+                    <div class="col-xs-6 col-sm-3 col-md-4 col-log-3 col-xl-3">
                         Apellido: 
                     </div>        
                     <div class="col-xs-3 col-sm-2 col-md-4 col-log-3 col-xl-2">
-                        <b>{{insc.apellido}}</b>
+                        <b>{{exam.apellido}}</b>
                     </div>
                 </div>
                 <div class="row">    
-                    <div class="col-xs-3 col-sm-2 col-md-4 col-log-3 col-xl-3">
+                    <div class="col-xs-6 col-sm-2 col-md-4 col-log-3 col-xl-3">
                         Nombre: 
                     </div>    
                     <div class="col-xs-3 col-sm-2 col-md-4 col-log-3 col-xl-2">
-                        <b>{{insc.cursoDivision}}</b>
+                        <b>{{exam.nombre}}</b>
                     </div>
                 </div>    
                 <div class="row">    
-                    <div class="col-xs-3 col-sm-2 col-md-4 col-log-3 col-xl-3">
-                        Inscripción: 
+                    <div class="col-xs-6 col-sm-2 col-md-4 col-log-3 col-xl-3">
+                        Curso: 
                     </div>    
                     <div class="col-xs-3 col-sm-2 col-md-4 col-log-3 col-xl-2">
-                        <b>{{insc.nombre}}</b>
+                        <b>{{exam.curso}}</b>
                     </div>
                 </div>  
+                <div class="row">    
+                    <div class="col-xs-6 col-sm-2 col-md-4 col-log-3 col-xl-3">
+                        División: 
+                    </div>    
+                    <div class="col-xs-3 col-sm-2 col-md-4 col-log-3 col-xl-2">
+                        <b>{{exam.division}}</b>
+                    </div>
+                </div>                 
+                <div class="row">    
+                    <div class="col-xs-6 col-sm-2 col-md-4 col-log-3 col-xl-3">
+                        Promedio: 
+                    </div>    
+                    <div class="col-xs-4 col-sm-2 col-md-4 col-log-3 col-xl-2">
+                        <b>{{exam.promedio}}</b>
+                        <a href="#"> <i class="fa fa-pencil" aria-hidden="true"></i></a>
+                    </div>
+                </div>  
+                <div class="row">    
+                    <div class="col-xs-6 col-sm-2 col-md-4 col-log-3 col-xl-3">
+                        Complementario: 
+                    </div>    
+                    <div class="col-xs-3 col-sm-2 col-md-4 col-log-3 col-xl-2">
+                        <b>{{exam.complementario}}</b>
+                        <a href="#"> <i class="fa fa-pencil" aria-hidden="true"></i></a>
+                    </div>
+                </div>                                
             
             <hr class="mt-2 mb-3"/>
-        </div>
+        </div> <!-- end div container -->
     </ng-template>
     <!--ng-template let-insc pTemplate="gridItem">
         <div style="padding:.5em" class="ui-g-12 ui-md-3">
