--- a/src/app/academico/carga.examen.component.html
+++ b/src/app/academico/carga.examen.component.html
@@ -83,26 +83,37 @@
                     <div class="col-xs-3 col-sm-2 col-md-4 col-log-3 col-xl-2">
                         <b>{{exam.division}}</b>
                     </div>
-                </div>                 
-                <div class="row">    
-                    <div class="col-xs-6 col-sm-2 col-md-4 col-log-3 col-xl-3">
-                        Promedio: 
-                    </div>    
-                    <div class="col-xs-4 col-sm-2 col-md-4 col-log-3 col-xl-2">
-                        <b>{{exam.promedio}}</b>
-                        <a href="#"> <i class="fa fa-pencil" aria-hidden="true"></i></a>
-                    </div>
-                </div>  
-                <div class="row">    
-                    <div class="col-xs-6 col-sm-2 col-md-4 col-log-3 col-xl-3">
-                        Complementario: 
-                    </div>    
-                    <div class="col-xs-3 col-sm-2 col-md-4 col-log-3 col-xl-2">
-                        <b>{{exam.complementario}}</b>
-                        <a href="#"> <i class="fa fa-pencil" aria-hidden="true"></i></a>
-                    </div>
-                </div>                                
-            
+                </div>    
+                <div class="row">             
+                        
+                            <div  class="col-xs-6 col-sm-2 col-md-4 col-log-3 col-xl-3">
+                                Promedio: 
+                            </div>    
+                            <div  class="col-xs-4 col-sm-2 col-md-4 col-log-3 col-xl-2">
+                                <b>{{exam.promedio}}</b>
+                                <!--a href="#"> <i class="fa fa-pencil" aria-hidden="true"></i></a-->
+                            </div>
+                </div>            
+                <div class="row">          
+                            <div class="col-xs-6 col-sm-2 col-md-4 col-log-3 col-xl-3">
+                                Complementario: 
+                            </div>    
+                            <div class="clearfix col-xs-3 col-sm-2 col-md-4 col-log-3 col-xl-2">
+                                <b>{{exam.complementario}}</b>
+                                <!--a href="#"> <i class="fa fa-pencil" aria-hidden="true"></i></a-->
+                            </div>
+                        
+                </div>     
+                <div class="row">          
+                            <div class="col-xs-6 col-sm-2 col-md-4 col-log-3 col-xl-3">
+                                Modificar Notas: 
+                            </div>    
+                            <div class="clearfix col-xs-3 col-sm-2 col-md-4 col-log-3 col-xl-2">
+                                
+                                <a [routerLink]="['/cargaexamenpromedio/'+exam?.asignaturaId,exam?.alumnoId]"> <i class="fa fa-pencil fa-2x" aria-hidden="true"></i></a>
+                            </div>
+                        
+                </div>                  
             <hr class="mt-2 mb-3"/>
         </div> <!-- end div container -->
     </ng-template>
