--- a/src/app/academico/carga.examen.component.html
+++ b/src/app/academico/carga.examen.component.html
@@ -49,7 +49,7 @@
                         Id Alumno: 
                     </div>
                     <div class="col-xs-3 col-sm-2 col-md-4 col-log-3 col-xl-2">    
-                        <b><a [routerLink]="['/viewinsc',exam?.id]" >{{exam?.id}}</a></b>
+                        <b><a [routerLink]="['/viewinsc',exam?.id]" >{{exam?.alumnoId}}</a></b>
                     </div>
                 </div>
                 <div class="row">                    
@@ -94,16 +94,7 @@
                                 <!--a href="#"> <i class="fa fa-pencil" aria-hidden="true"></i></a-->
                             </div>
                 </div>            
-                <div class="row">          
-                            <div class="col-xs-6 col-sm-2 col-md-4 col-log-3 col-xl-3">
-                                Complementario: 
-                            </div>    
-                            <div class="clearfix col-xs-3 col-sm-2 col-md-4 col-log-3 col-xl-2">
-                                <b>{{exam.complementario}}</b>
-                                <!--a href="#"> <i class="fa fa-pencil" aria-hidden="true"></i></a-->
-                            </div>
-                        
-                </div>     
+   
                 <div class="row">          
                             <div class="col-xs-6 col-sm-2 col-md-4 col-log-3 col-xl-3">
                                 Modificar Notas: 
