--- a/src/app/academico/compendio.component.html
+++ b/src/app/academico/compendio.component.html
@@ -55,7 +55,7 @@
         <div> 
             <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-3">
                 <button id="buttonConfirmId" pButton style="width:100%"  
-                    icon=""
+                    icon="fa fa-file-excel-o fa-lg"
                     type="submit" label="Generar Compendio"
                      [disabled]="!busquedaForm.valid"></button>         
             </div>                    
