--- a/src/app/academico/carga.examen.promedio.component.html
+++ b/src/app/academico/carga.examen.promedio.component.html
@@ -2,62 +2,65 @@
 <form [formGroup]="examenesForm" (ngSubmit)="onSubmit(examenesForm.value)">
     <p-panel header="Carga de Notas">
         <p-fieldset>
-            <p-header *ngIf="examenes">{{examenes[0].asignatura}} - {{examenes[0].apellido+' '+examenes[0].nombre}}</p-header>
+            <p-header *ngIf="alumno && periodosEval">{{asignatura.descripcion}} - {{alumno.apellido+' '+alumno.nombre}}</p-header>
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
                     Periodo Lectivo:
                 </div>    
-                <div *ngIf="examenes" class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
-                    {{examenes[0].periodoLectivo}}
+                <div *ngIf="periodosEval"  class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
+                    {{periodosEval.periodos[0].descripcion}}
                 </div>    
-                <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
+                <div *ngIf="periodosEval" class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
                     Curso y División:
                 </div>    
-                <div *ngIf="examenes" class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
-                    {{examenes[0].curso +' '+examenes[0].division}}
+                <div *ngIf="periodosEval"  class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
+                    {{periodosEval.periodos[0].inscripcion.detalleInsc}}
                 </div>            
                        
             </div>    
         </p-fieldset>    
-        <div class="container">
-            <div  class="row" *ngFor="let exam of examenes">
-                <div  class="align-middle m-1 col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-3">
-                    {{exam?.periodoEval + ' '+exam?.tipoExamen}}:
+        <div *ngIf="periodosEval" class="container">
+            <p-fieldset  *ngFor="let peri of periodosEval.periodos">
+                <p-header>{{asignatura.descripcion}} - {{alumno.apellido+' '+alumno.nombre}}</p-header>
+                <div class="row" *ngFor="let keyFormControl of peri.keyFormControls;let i=index">    
+
+                    <div   
+                        class="align-middle m-1 col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-3">
+                        
+                        {{peri.labelArray[i]}}
+                    </div>    
+
+                    <div *ngIf="keyFormControl.indexOf('inas')==-1" class="m-1 col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
+                        
+                        <input class="form-control"  style="width:100%"  
+                            pInputText pKeyFilter="num"
+                            type="text" formControlName="{{keyFormControl}}"> 
+                        
+                    </div>  
+                    <div *ngIf="keyFormControl.indexOf('inas')!=-1" class="m-1 col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
+                        
+                        <input class="form-control"  style="width:100%"  
+                            pInputText pKeyFilter="int"
+                            type="text" formControlName="{{keyFormControl}}"> 
+                        
+                    </div>                      
+                    <div 
+                        class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
+                        <p-message severity="error" text="Ingrese un valor entre 0 y 10"
+                            *ngIf="examenesForm.controls[keyFormControl].dirty && examenesForm.controls[keyFormControl].errors">
+                        </p-message>                        
+                    </div>      
+                
                 </div>    
 
-                <div  class="m-1 col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
-                    <input class=" form-control"  style="width:100%"  
-                        pInputText pKeyFilter="num"
-                        type="text" 
-                        formControlName="{{'exam'+exam.id}}"> 
-                    
-                </div>  
-                <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
-                    <p-message severity="error" text="Ingrese un valor entre 0 y 10"
-                        *ngIf="examenesForm.get('exam'+exam.id).dirty && examenesForm.get('exam'+exam.id).errors"
-                        >
-                    </p-message>                        
-                </div>      
-            </div>        
-        </div>
+             
+            </p-fieldset>   
+        </div> 
         <div class="row">
              <button id="buttonConfirmId" pButton style="width:100%"  
                     type="submit" label="Confirmar" [disabled]="!examenesForm.valid">
              </button>
         </div>    
 
-                <!-- div *ngIf="alumnoForm.get('id').value!=null" class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
-                    <div class="ui-grid-row">
-                            <div class="ui-grid-col-2">
-                                Id:
-                            </div>
-                            <div class="ui-grid-row">    
-                                    <div class="ui-grid-col-4">
-                                        <input class="form-control" style="width:100%"   formControlName="id" disabled />
-                                    </div>
-
-                            </div>    
-                    </div>                    
-                </div -->            
     </p-panel>    
 </form>    
