--- a/src/app/academico/carga.examen.promedio.component.html
+++ b/src/app/academico/carga.examen.promedio.component.html
@@ -1,8 +1,12 @@
 
 <form [formGroup]="examenesForm" (ngSubmit)="onSubmit(examenesForm.value)">
     <p-panel header="Carga de Notas">
+        
         <p-fieldset>
-            <p-header *ngIf="alumno && periodosEval">{{(asignatura | async).descripcion}} - {{(alumno | async).apellido+' '+(alumno | async).nombre}}</p-header>
+            <p-header *ngIf="alumno && periodosEval">
+                {{(asignatura | async).descripcion}} - {{(alumno | async).apellido+' '+(alumno | async).nombre}}
+                
+            </p-header>
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
                     Periodo Lectivo:
@@ -20,9 +24,11 @@
             </div>    
         </p-fieldset>    
         <div *ngIf="periodosEval" class="container">
-            <p-fieldset  *ngFor="let peri of (periodosEval | async).periodos">
-                <p-header>{{peri.descripcion}}</p-header>
-                
+            <p-fieldset  *ngFor="let peri of (periodosEval | async).periodos;let j=index ">
+                <p-header>{{peri.descripcion}}  - Promedio: {{($promedios | async)[j]}}
+
+                </p-header>
+                 
                 <div class="row" *ngFor="let keyFormControl of peri.keyFormControls;let i=index">    
 
                     <div   
@@ -47,7 +53,7 @@
                     </div>                      
                     <div 
                         class="col-xs-12 col-sm-6 col-md-4 col-log-3 col-xl-2">
-                        <p-message severity="error" text="Ingrese un valor entre 0 y 10"
+                        <p-message severity="error" text="Ingrese un valor 0 o mayor"
                             *ngIf="examenesForm.controls[keyFormControl].dirty && examenesForm.controls[keyFormControl].errors">
                         </p-message>                        
                     </div>      
