--- a/src/app/academico/carga.examen.component.html
+++ b/src/app/academico/carga.examen.component.html
@@ -6,7 +6,11 @@
         <div class="col-xs-6 col-sm-3 col-md-4 col-log-3 col-xl-6">
             {{item.promedio }}
         </div>    
-        
+        <div>
+            <a [routerLink]="['/cargaexamenpromedio/'+item?.asignaturaId,item?.alumnoId,item?.perId]">
+                 <i class="fa fa-pencil fa-2x" aria-hidden="true"></i>
+            </a>
+        </div>    
     </div>  
     <p-footer>
         <button type="button" pButton icon="fa fa-times" style="width:100%"
@@ -118,7 +122,7 @@
                             </div>    
                             <div class="clearfix col-xs-3 col-sm-2 col-md-4 col-log-3 col-xl-2">
                                 
-                                <a [routerLink]="['/cargaexamenpromedio/'+exam?.asignaturaId,exam?.alumnoId]"> <i class="fa fa-pencil fa-2x" aria-hidden="true"></i></a>
+                                <a [routerLink]="['/cargaexamenpromedio/'+exam?.asignaturaId,exam?.alumnoId,0]"> <i class="fa fa-pencil fa-2x" aria-hidden="true"></i></a>
                             </div>
                         
                 </div>    
